@@ -1,4 +1,7 @@
 2016-01-14
+A bit of documentation in rationalNumbers
+
+2016-01-14
 Added a README and Makefile
 
 2016-01-13
